tests/ui/fail/trait_not_impl.stderr
error[E0277]: the trait bound `String: DeviceDestroyable` is not satisfied
  --> tests/ui/fail/trait_not_impl.rs:12:5
   |
12 |     b: String,
   |     ^^^^^^^^^ the trait `DeviceDestroyable` is not implemented for `String`
   |
   = help: the following other types implement trait `DeviceDestroyable`:
             &T
             Box<T>
             Buffer
             BufferView
             CommandPool
             DescriptorPool
             DescriptorSetLayout
             DescriptorUpdateTemplate
           and $N others

error[E0277]: the trait bound `String: DeviceDestroyable` is not satisfied
  --> tests/ui/fail/trait_not_impl.rs:15:10
   |
15 | #[derive(DeviceDestroyable)]
   |          ^^^^^^^^^^^^^^^^^ the trait `DeviceDestroyable` is not implemented for `String`
16 | struct Unnamed(ImplDeviceDestroyable, String);
   |                                       ------ required by a bound introduced by this call
   |
   = help: the following other types implement trait `DeviceDestroyable`:
             &T
             Box<T>
             Buffer
             BufferView
             CommandPool
             DescriptorPool
             DescriptorSetLayout
             DescriptorUpdateTemplate
           and $N others
